@@ -1,6 +1,8 @@
 package io.statemodeler.core;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -35,7 +37,7 @@ public record StateDef(
         this.initial = initial;
         this.from = List.copyOf(from);
         this.fromAnyOf = List.copyOf(fromAnyOf);
-        this.attributes = Map.copyOf(attributes);
+        this.attributes = Collections.unmodifiableMap(new LinkedHashMap<>(attributes));
     }
 
     /**
